Fixes #180 scrollbar issue

--- a/src/sass/partials/_workers.scss
+++ b/src/sass/partials/_workers.scss
@@ -93,6 +93,7 @@
 				padding-bottom: 0;
 				margin-bottom: 0;
 				height: 0;
+				overflow: hidden;
 			}
 		}
 		
